; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/hwpmc/extr_hwpmc_logging.c_pmclog_process_threadexit.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/hwpmc/extr_hwpmc_logging.c_pmclog_process_threadexit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pmc_owner = type { i32 }
%struct.thread = type { i32 }

@THR_EXIT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @pmclog_process_threadexit(%struct.pmc_owner* %0, %struct.thread* %1) #0 {
  %3 = alloca %struct.pmc_owner*, align 8
  %4 = alloca %struct.thread*, align 8
  store %struct.pmc_owner* %0, %struct.pmc_owner** %3, align 8
  store %struct.thread* %1, %struct.thread** %4, align 8
  %5 = load %struct.pmc_owner*, %struct.pmc_owner** %3, align 8
  %6 = load i32, i32* @THR_EXIT, align 4
  %7 = call i32 @PMCLOG_RESERVE(%struct.pmc_owner* %5, i32 %6, i32 4)
  %8 = load %struct.thread*, %struct.thread** %4, align 8
  %9 = getelementptr inbounds %struct.thread, %struct.thread* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @PMCLOG_EMIT32(i32 %10)
  %12 = load %struct.pmc_owner*, %struct.pmc_owner** %3, align 8
  %13 = call i32 @PMCLOG_DESPATCH(%struct.pmc_owner* %12)
  ret void
}

declare dso_local i32 @PMCLOG_RESERVE(%struct.pmc_owner*, i32, i32) #1

declare dso_local i32 @PMCLOG_EMIT32(i32) #1

declare dso_local i32 @PMCLOG_DESPATCH(%struct.pmc_owner*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
